blue-validation module